aulas/modulo-10-ingress/aula-02-visao-geral/api-catalog-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-catalog
spec:
  type: ClusterIP
  selector:
      run: api-catalog
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
